not ignoring executable and DLLs

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-VisualStudio/Build/
-VisualStudio/.vs/
-VisualStudio/BasisFluid.vcxproj.user
+/VisualStudio/Build/x64/Debug/*
+/VisualStudio/Build/x64/Release/*
+!/VisualStudio/Build/x64/Release/BasisFluid.exe
+!/VisualStudio/Build/x64/Release/glew32mx.dll
+!/VisualStudio/Build/x64/Release/glfw3.dll
+
+/VisualStudio/.vs/*
+/VisualStudio/BasisFluid.vcxproj.user
