--- a/VisualStudio/BasisFluid.vcxproj
+++ b/VisualStudio/BasisFluid.vcxproj
@@ -19,7 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\BasisFluid\Source\BasisFluid.cpp" />
+    <ClCompile Include="..\BasisFluid\Source\Application.cpp" />
+    <ClCompile Include="..\BasisFluid\Source\Main.cpp" />
+    <ClCompile Include="..\BasisFluid\Source\Callbacks.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\BasisFluid\Source\Callbacks.h" />
+    <ClInclude Include="..\BasisFluid\Source\Application.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -118,11 +124,11 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Olivier\Documents\projects\basisfluid2020\Libs\glfw-3.1.2.bin.WIN64\lib-vc2015;C:\Users\Olivier\Documents\projects\basisfluid2020\Libs\glew-1.13.0.WIN64\lib\Release MX\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glew32mx.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Olivier\Documents\projects\basisfluid2020\Libs\glfw-3.1.2.bin.WIN64\lib-vc2015;C:\Users\Olivier\Documents\projects\basisfluid2020\Libs\glew-1.13.0.WIN64\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glew32.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y "$(ProjectDir)..\Libs\glew-1.13.0.WIN64\bin\Release MX\x64\glew32mx.dll" "$(OutDir)"
+      <Command>xcopy /y "$(ProjectDir)..\Libs\glew-1.13.0.WIN64\bin\Release\x64\glew32.dll" "$(OutDir)"
 xcopy /y "$(ProjectDir)..\Libs\glfw-3.1.2.bin.WIN64\lib-vc2015\glfw3.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
     <PostBuildEvent>
@@ -166,11 +172,11 @@ xcopy /y "$(ProjectDir)..\Libs\glfw-3.1.2.bin.WIN64\lib-vc2015\glfw3.dll" "$(Out
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Olivier\Documents\projects\basisfluid2020\Libs\glfw-3.1.2.bin.WIN64\lib-vc2015;C:\Users\Olivier\Documents\projects\basisfluid2020\Libs\glew-1.13.0.WIN64\lib\Release MX\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glew32mx.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Olivier\Documents\projects\basisfluid2020\Libs\glfw-3.1.2.bin.WIN64\lib-vc2015;C:\Users\Olivier\Documents\projects\basisfluid2020\Libs\glew-1.13.0.WIN64\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glew32.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y "$(ProjectDir)..\Libs\glew-1.13.0.WIN64\bin\Release MX\x64\glew32mx.dll" "$(OutDir)"
+      <Command>xcopy /y "$(ProjectDir)..\Libs\glew-1.13.0.WIN64\bin\Release\x64\glew32.dll" "$(OutDir)"
 xcopy /y "$(ProjectDir)..\Libs\glfw-3.1.2.bin.WIN64\lib-vc2015\glfw3.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
     <PostBuildEvent>
