--- a/VisualStudio/BasisFluid.vcxproj
+++ b/VisualStudio/BasisFluid.vcxproj
@@ -19,6 +19,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\BasisFluid\Source\DataBuffer1D.tpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\BasisFluid\Source\DataBuffer2D.tpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\BasisFluid\Source\GridData2D.tpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="..\BasisFluid\Source\Init.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Init_BasisFlows.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Init_ComputeShaders.cpp" />
@@ -29,10 +41,14 @@
     <ClCompile Include="..\BasisFluid\Source\Main.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Callbacks.cpp" />
     <ClCompile Include="..\BasisFluid\Source\SimulationStep.cpp" />
+    <ClCompile Include="..\BasisFluid\Source\VectorField2D.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\BasisFluid\Source\Callbacks.h" />
     <ClInclude Include="..\BasisFluid\Source\Application.h" />
+    <ClInclude Include="..\BasisFluid\Source\DataBuffer1D.h" />
+    <ClInclude Include="..\BasisFluid\Source\DataBuffer2D.h" />
+    <ClInclude Include="..\BasisFluid\Source\GridData2D.h" />
+    <ClInclude Include="..\BasisFluid\Source\VectorField2D.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
