--- a/VisualStudio/BasisFluid.vcxproj
+++ b/VisualStudio/BasisFluid.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\BasisFluid\Source\BasisFlows.cpp" />
     <ClCompile Include="..\BasisFluid\Source\DataBuffer1D.tpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
@@ -45,9 +46,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\BasisFluid\Source\Application.h" />
+    <ClInclude Include="..\BasisFluid\Source\BasisFlows.h" />
     <ClInclude Include="..\BasisFluid\Source\DataBuffer1D.h" />
     <ClInclude Include="..\BasisFluid\Source\DataBuffer2D.h" />
     <ClInclude Include="..\BasisFluid\Source\GridData2D.h" />
+    <ClInclude Include="..\BasisFluid\Source\Utils.h" />
     <ClInclude Include="..\BasisFluid\Source\VectorField2D.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
