--- a/VisualStudio/BasisFluid.vcxproj
+++ b/VisualStudio/BasisFluid.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\BasisFluid\Source\BasisFlows.cpp" />
+    <ClCompile Include="..\BasisFluid\Source\BoundaryFlows.cpp" />
     <ClCompile Include="..\BasisFluid\Source\DataBuffer1D.tpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
@@ -34,9 +35,11 @@
     </ClCompile>
     <ClCompile Include="..\BasisFluid\Source\Init.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Init_BasisFlows.cpp" />
-    <ClCompile Include="..\BasisFluid\Source\Init_ComputeShaders.cpp" />
+    <ClCompile Include="..\BasisFluid\Source\ObstacleShader.h" />
     <ClCompile Include="..\BasisFluid\Source\Init_DataBuffers.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Init_Obstacles.cpp" />
+    <ClCompile Include="..\BasisFluid\Source\Obstacles.h" />
+    <ClCompile Include="..\BasisFluid\Source\ShaderPipeline.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Run.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Draw.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Main.cpp" />
@@ -50,6 +53,7 @@
     <ClInclude Include="..\BasisFluid\Source\DataBuffer1D.h" />
     <ClInclude Include="..\BasisFluid\Source\DataBuffer2D.h" />
     <ClInclude Include="..\BasisFluid\Source\GridData2D.h" />
+    <ClInclude Include="..\BasisFluid\Source\ShaderPipeline.h" />
     <ClInclude Include="..\BasisFluid\Source\Utils.h" />
     <ClInclude Include="..\BasisFluid\Source\VectorField2D.h" />
   </ItemGroup>
