--- a/VisualStudio/BasisFluid.vcxproj.filters
+++ b/VisualStudio/BasisFluid.vcxproj.filters
@@ -8,6 +8,7 @@
     <ClInclude Include="..\BasisFluid\Source\GridData2D.h" />
     <ClInclude Include="..\BasisFluid\Source\BasisFlows.h" />
     <ClInclude Include="..\BasisFluid\Source\Utils.h" />
+    <ClInclude Include="..\BasisFluid\Source\ShaderPipeline.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\BasisFluid\Source\Main.cpp" />
@@ -17,12 +18,16 @@
     <ClCompile Include="..\BasisFluid\Source\Init.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Init_Obstacles.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Init_DataBuffers.cpp" />
-    <ClCompile Include="..\BasisFluid\Source\Init_ComputeShaders.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Init_BasisFlows.cpp" />
     <ClCompile Include="..\BasisFluid\Source\VectorField2D.cpp" />
     <ClCompile Include="..\BasisFluid\Source\DataBuffer2D.tpp" />
     <ClCompile Include="..\BasisFluid\Source\DataBuffer1D.tpp" />
     <ClCompile Include="..\BasisFluid\Source\GridData2D.tpp" />
     <ClCompile Include="..\BasisFluid\Source\BasisFlows.cpp" />
+    <ClCompile Include="..\BasisFluid\Source\Callbacks.cpp" />
+    <ClCompile Include="..\BasisFluid\Source\BoundaryFlows.cpp" />
+    <ClCompile Include="..\BasisFluid\Source\Obstacles.h" />
+    <ClCompile Include="..\BasisFluid\Source\ShaderPipeline.cpp" />
+    <ClCompile Include="..\BasisFluid\Source\ObstacleShader.h" />
   </ItemGroup>
 </Project>
