particle seeding and draw

--- a/VisualStudio/BasisFluid.vcxproj
+++ b/VisualStudio/BasisFluid.vcxproj
@@ -38,6 +38,7 @@
     <ClCompile Include="..\BasisFluid\Source\Init_DataBuffers.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Init_Obstacles.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Obstacles.h" />
+    <ClCompile Include="..\BasisFluid\Source\Particles.cpp" />
     <ClCompile Include="..\BasisFluid\Source\ShaderPipeline.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Run.cpp" />
     <ClCompile Include="..\BasisFluid\Source\Draw.cpp" />
@@ -53,6 +54,7 @@
     <ClInclude Include="..\BasisFluid\Source\DataBuffer2D.h" />
     <ClInclude Include="..\BasisFluid\Source\GridData2D.h" />
     <ClInclude Include="..\BasisFluid\Source\ObstacleShader.h" />
+    <ClInclude Include="..\BasisFluid\Source\ParticleShader.h" />
     <ClInclude Include="..\BasisFluid\Source\ShaderPipeline.h" />
     <ClInclude Include="..\BasisFluid\Source\Utils.h" />
     <ClInclude Include="..\BasisFluid\Source\VectorField2D.h" />
